test/libsolidity/syntaxTests/using/using_empty_list_err.sol
contract C {
    using {} for uint;
}
// ----
// ParserError 2314: (24-25): Expected identifier but got '}'
